@@ -12,3 +12,4 @@ fal_dsm.txt
 *.prg
 *.st
 *.exe
+*.s19
